fix typo, admittedly i am not using the with statement often, not at all, to be precise.
--HG--
extra : convert_revision : svn%3A5fdb0b31-00ae-4507-bd76-94d651a7451c/pypy/trunk%4062607

--- a/pypy/doc/faq.txt
+++ b/pypy/doc/faq.txt
@@ -62,7 +62,7 @@ Which Python version (2.x?) does PyPy implement?
 
 PyPy currently aims to be fully compatible with Python 2.5. That means that
 it contains the standard library of Python 2.5 and that it supports 2.5
-features (such as the width statement).  
+features (such as the with statement).  
 
 .. _threading:
 
