--- a/pypy/jit/metainterp/TODO
+++ b/pypy/jit/metainterp/TODO
@@ -1,6 +1,15 @@
 
+[fijal] I think following is done, please update
 * do something about not seeing a loop at all; maybe disable
   temporarily(?) recognizing foreign can_enter_jit()
 
 * Optimization: bridges from interpreter to compiled code
 
+* support floats
+
+* fix bugs in virtualizables, but think first
+
+* support unicode
+
+* support recursive portals (since we have support for all kinds of bridges,
+  seems to be rather straight-forward)
