New version of the AVM2 branch. Passes more tests.
Requires mecheye-fusion from PyPI, which evolved out of the original
work on this branch, but was separated when the Gnash team wanted
a SWF export library to create test cases for AVM2.

--HG--
branch : avm
extra : convert_revision : svn%3A5fdb0b31-00ae-4507-bd76-94d651a7451c/pypy/branch/avm%4070568

--- a/README
+++ b/README
@@ -21,6 +21,15 @@ which gives you many good starting and entry points into playing with
 PyPy.  It will also point you to our documentation section which is
 generated from information in the pypy/doc directory.
 
+The AVM1/AVM2 translator backends require mecheye-fusion, which is
+easily installable from PyPI:
+
+easy_install mecheye-fusion
+
+or
+
+pip install mecheye-fusion
+
 Enjoy and send us feedback!
 
     the pypy-dev team <pypy-dev@codespeak.net>
