--- a/pypy/doc/faq.txt
+++ b/pypy/doc/faq.txt
@@ -56,10 +56,12 @@ PyPy is regularly and extensively tested on Linux machines and on Mac
 OS X and mostly works under Windows too (but is tested there less
 extensively). PyPy needs a CPython running on the target platform to
 bootstrap, as cross compilation is not really meant to work yet.
-At the moment you need CPython 2.4 (with ctypes 0.9.9.6 or newer) or
-CPython 2.5 for the translation process.
+At the moment you need CPython 2.4 (with ctypes) or CPython 2.5 or 2.6
+for the translation process.
 
-PyPy also basically works in a 64-bit Linux environment.
+PyPy also basically works in a 64-bit Linux environment, but
+*it requires a 32-bit Intel CPU* for the JIT right now.  (It works
+fine in a 32-bit chroot of an Intel 64.)
 
 ------------------------------------------------
 Which Python version (2.x?) does PyPy implement?
