Add PyBool_FromLong and increment refcount in make_ref
--HG--
extra : convert_revision : svn%3A5fdb0b31-00ae-4507-bd76-94d651a7451c/pypy/trunk%4072474

--- a/pypy/module/cpyext/TODO
+++ b/pypy/module/cpyext/TODO
@@ -1,3 +1,4 @@
  - Make the pypy interpreter support dynamically created typeobjects to support PyTypeObject
  - Add exceptions
  - Generate header files programmatically.
+ - Fix the '#define long int' hack in both api.py and include/Python.h
