Mention _PyString_Resize
--HG--
extra : convert_revision : svn%3A5fdb0b31-00ae-4507-bd76-94d651a7451c/pypy/trunk%4072576

--- a/pypy/module/cpyext/TODO
+++ b/pypy/module/cpyext/TODO
@@ -35,5 +35,8 @@ pointer to a char buffer; it may be NULL.
   called, the pypy string is created, and added in py_objects_r2w.
   The buffer is then supposed to be immutable.
 
+- _PyString_Resize works only on not-yet-pypy'd strings, and returns a
+  similar object.
+
 - There could be an (expensive!) check in from_ref() that the buffer
   still corresponds to the pypy gc-managed string.
