Mention PyString_Size()
--HG--
extra : convert_revision : svn%3A5fdb0b31-00ae-4507-bd76-94d651a7451c/pypy/trunk%4072578

--- a/pypy/module/cpyext/TODO
+++ b/pypy/module/cpyext/TODO
@@ -38,5 +38,8 @@ pointer to a char buffer; it may be NULL.
 - _PyString_Resize works only on not-yet-pypy'd strings, and returns a
   similar object.
 
+- PyString_Size don't need to force the object. (in this case, another
+  "size" member is needed)
+
 - There could be an (expensive!) check in from_ref() that the buffer
   still corresponds to the pypy gc-managed string.
